--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-svgmin": "^1.2.3",
     "gulp-svgstore": "^6.1.0",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
   },
   "scripts": {
     "test": "editorconfig-cli",
